# veritas

./: .gitignore  DESIGN.md  PARAGRAPH_DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/veritas/: __init__.py  cli.py  retrieval.py  state.py  verifier.py
tests/: test_cli.py  test_retrieval.py  test_state.py  test_verifier.py
